--- a/index.html
+++ b/index.html
@@ -6,19 +6,43 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
   
+  <!-- Import pure.css -->
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 
 
 </head>
 <body>
-  
-<div id="interactivechart"></div>
-
+  <div class="page">
+   <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h1>Meat Consumption</h1>
+      </div>
+    </div>
+    <div class="pure-g">
+      <div class="pure-u-2-1">
+        <div id="vis2"  class="vis-container"></div>
+      </div>
+    </div>
+    <div class="pure-g">
+      <div class="pure-u-2-1">
+        <div id="vis1"  class="vis-container"></div>
+      </div>
+    </div>
+  </div>
 <script type="text/javascript">
 
-  var spec2 = "js/interactivechart.vg.json";
-  vegaEmbed('#choropleth_map', spec2).then(function(result) {
+  var spec1 = "js/interactivechart.vg.json";
+  var spec2 = "js/choropleth_map.vg.json";
+
+  vegaEmbed('#vis1', spec1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  vegaEmbed('#vis2', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
